#130 BUG: reorder function work on android now, removed the reorder library and defined reorder function.